Added that kernel panic (red LED flashing) can happen while powering on with an _almost_ discharged battery. Took me a while to guess that I should press AUX and then plug USB power ;)

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -31,7 +31,7 @@ Workarounds:
 
 ==== Can't boot with discharged or missing battery ====
 
-Issue: Neo FreeRunner requires battery power to boot, because Neo FreeRunner consumes too much current while booting to boot with only a charger. Since charging isn't enabled until the Neo FreeRunner has booted, this means that a discharged battery can not be charged.
+Issue: Neo FreeRunner requires battery power to boot, because Neo FreeRunner consumes too much current while booting to boot with only a charger. Since charging isn't enabled until the Neo FreeRunner has booted, this means that a discharged battery can not be charged. One manifestation of this problem is a kernel panic (red LED flashes constantly) when trying to boot using the power button.
 
 Affects: Unknown.
 
