added issue that battery discharges after being fully charged

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -51,6 +51,20 @@ Workarounds:
 See also:
 :[[Neo_FreeRunner_Battery|Neo FreeRunner Battery]]
 
+==== Battery discharges when charging completes ====
+
+Issue: If the Neo FreeRunner has been charging, when charging completes, it seems to drain the battery and not turn on charging again. This seems to be bug of PMU-registers setup, that shows up when PMU has to handle bat autonomously (=suspend). There might be issues our current scheme relies on wake-interrupt at bat-full which doesn't succeed, or something like that.
+
+Affects: Unknown.
+
+Status: 
+
+Workarounds: 
+
+# When the battery is full, disconnect the charger
+
+See also:
+
 ==== Some SIMs Don't Work ====
 
 Issue: There are reports that some users cannot register with their GSM network when using certain SIM cards. See for example http://lists.openmoko.org/pipermail/community/2008-July/020370.html
