added sd corruption on suspend/resume

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -65,6 +65,22 @@ Workarounds:
 
 See also:
 
+==== Suspend/resume corrupts SD card's partition table ====
+
+Issue: Suspend/resume corrupts the partition table of the SD card
+
+Affects: Unknown.
+
+Status: 
+
+Workarounds: 
+
+# [[https://docs.openmoko.org/trac/ticket/1802#comment:5 Patched kernel]] might solve the problem
+
+See also:
+
+:[[https://docs.openmoko.org/trac/ticket/1802  trac ticket]]
+
 ==== Some SIMs Don't Work ====
 
 Issue: There are reports that some users cannot register with their GSM network when using certain SIM cards. See for example http://lists.openmoko.org/pipermail/community/2008-July/020370.html
