/* Suspend/resume corrupts SD card's partition table */

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -73,9 +73,11 @@ Affects: Unknown.
 
 Status: 
 
+[[https://docs.openmoko.org/trac/ticket/1802#comment:6 Patched kernel]] might solve the problem
+
 Workarounds: 
 
-# [[https://docs.openmoko.org/trac/ticket/1802#comment:5 Patched kernel]] might solve the problem
+# [[https://docs.openmoko.org/trac/ticket/1802#comment:5 Script]] as a temporary workaround
 
 See also:
 
