/* Updating the environment */

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -134,6 +134,8 @@ For easy maintenance of your build environment the following commands are availa
 1 - To update the MokoMakefile to the latest version:
    make update-makefile 
 
+Be aware that any changes you previously made to the Makefile (like the git branch to use) are lost when executing ''update-makefile''.
+
 2 - To make sure that any recent changes to the build directory structure have been applied:
    make setup 
 
