--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -57,7 +57,7 @@ Next, tar up the root filesystem:
 
   # tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint> .
 
-Where ''<mountpoint>'' is the location where the jff2 filesystem was mounted.
+Where ''<mountpoint>'' is the location where the jff2 filesystem was mounted.  Note the space and the period after the mountpoint.
 
 ==== Installing Root Filesystem ====
 
