--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -135,3 +135,9 @@ Qtopia comes with support for German and American English, and users from other 
 Adding characters to the keyboard requires modifications to the source code, as described [http://www.qtopia.net/modules/newbb_plus/viewtopic.php?topic_id=512&forum=16 here].
 
 [[Category:Qtopia]]
+
+== Bugs ==
+
+=== in 4.3.2 release ===
+
+* Voice notes seem not to work, only record a 44 bytes file, containing no voice
