--- a/Distributions.mw
+++ b/Distributions.mw
@@ -93,11 +93,11 @@ The Qtopia distribution from [http://www.trolltech.com Trolltech], it aims to pr
 
 === Debian ===
 
-In the words of Joachim "nomeata" Breitner, project manager:
+In the words of Joachim "nomeata" Breitner from the [http://wiki.debian.org/Teams/DebianFSO pkg-fso] team:
 
-:"It’s not really a distribution in the Openmoko sense of the word, but rather a different underlying system for Openmoko distributions. At the moment, we ship the software from the FSO stack, but hopefully we’ll also have, for example, the Stable Hybrid Release software in our archive.
+:It’s not really a distribution in the Openmoko sense of the word, but rather a different underlying system for Openmoko distributions. At the moment, we ship the software from the FSO stack, but hopefully we’ll also have, for example, the Stable Hybrid Release software in our archive.
 
-:"So for now, Debian is a different way of installing FSO, which takes more space and provides more programs :-)
+:So for now, Debian is a different way of installing FSO, which takes more space and provides more programs :-)
 
 * [[Debian]]
 
