/* Import for ASU/Qtopia */

--- a/Import_Vcf_Contacts.mw
+++ b/Import_Vcf_Contacts.mw
@@ -143,6 +143,7 @@ To import your address book from VCard format (>=Qtopia 4.3.2 stable):
 
 You will be asked if you want to import the contacts form addressbook.vcf (the contact name will be taken from the "N:" vCard field).
 
+To import a huge number of contacts, single .vcf files can be merged together using cat *.vcf > all.vcf, than import all.vcf
 
 [[category:Openmoko]]
 [[category:Documentation]]
