--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -36,7 +36,7 @@ Voit lähteä liikkeelle [[introduction|johdantosivulta]], valokuvista, videoist
 *[[GroupSales|Ryhmätilaukset]]
 *[[Why Openmoko|Miksi Openmoko on ykkösvalinta: vertaileva katselmus]]
 ===<font color=white>Tilannevedokset</font>===
-*<font color=white>2008.08-jakelun uusimmat ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/releases/Om2008.8-update/ täältä].</font>
+*<font color=white>Om 2008.8 -jakelun uusimmat ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/releases/Om2008.8-update/ täältä].</font>
 *<font color=white>Minimaalisen, itse mukautettavan jakelun löydät aina seuraavasta osoitteesta:</font>
 ** <font color=white>"gta02" FreeRunnerille, "gta01" Neo1973:lle </font>[http://downloads.openmoko.org/daily/ http://downloads.openmoko.org/daily/]
 **<font color=white>Arvioita päivittäisistä tilannevedoksista [[Snapshot_review|täällä]].
