*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1103,7 +1103,7 @@ Status : 7/10
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/Nuker18 Vladi]
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/Yair Yair]
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/darkeye Eran]
-* [http://wiki.openmoko.org/wiki/Special:Emailuser/tomerb]
+* [http://wiki.openmoko.org/wiki/Special:Emailuser/tomerb Tomer]
 
 == Italy == 
 For more informations and to organize groups, visit the
