/* Build Qtopia from source */

--- a/Qtopia_on_Neo1973.mw
+++ b/Qtopia_on_Neo1973.mw
@@ -236,6 +236,8 @@ Now, in theory, it should be possible to could create a new entry in the [[uboot
 The source code for qtopia is available from
 [ftp://ftp.trolltech.com/qtopia/ ftp.Trolltech.com/Qtopia]
 
+See http://blog.wolfman.com/articles/2008/08/27/porting-xgps-to-qtopia-for-the-freerunner for some instructions on building.
+
 == Tips ==
 Most things seem to work out of the box, however you might need to use the following command to get audio (but not with the official flash image available from Trolltech):
  alsactl -f /etc/gsmhandset.state restore
