--- a/Getting_Started_with_your_Neo_1973.mw
+++ b/Getting_Started_with_your_Neo_1973.mw
@@ -97,7 +97,7 @@ If the battery is not sufficiently charged, the phone will not turn on, even if 
 === Flashing the Neo1973 GTA01Bv4 ===
 The GTA01Bv4 devices that are currently shipping do not boot out of the box.  Flashing the phone with the latest kernel and [[Userspace root image|supporting file system ("rootfs")]] is required before the phone will successfully boot.
 
-Read more information at about [[Flashing openmoko]]. MacOS X users please also refer to [[MacOS_X]].
+Read more information at about [[Flashing the Neo 1973]]. MacOS X users please also refer to [[MacOS_X]].
 
 === Powering down the phone ===
 
