--- a/FAQ.mw
+++ b/FAQ.mw
@@ -144,9 +144,17 @@ Yes
 
 See [[Distributions#2007.2|factory default software image]]
 
+===What alternate distributions are available for the Neo FreeRunner?===
+
+See [[Distributions|Distributions]]
+
 === Where can I download and reinstall the factory default image? ===
 
 See [[Flashing_the_Neo_FreeRunner|Flashing the Neo FreeRunner]]
+
+===Can the Neo FreeRunner dual boot? Multiple boot?===
+
+Since the Neo FreeRunner can boot from the micro SD card, you can install from as many distributions as you can fit on the card. See [[Boot_from_sd_card|Booting from SD]].
 
 ===Can the software do/connect to/... ===
 
@@ -263,10 +271,6 @@ In either case please check for softphone apps ported to the Openmoko distributi
 ===Will it be possible to use popular Instant Messaging applications such as MSN Messenger? ===
 
 Very probably. MSN is closed source and will only run where Microsoft wants you to run it. But there are many Open Source IM clients, many of which have a plugin architecture and so support the use of more than one IM protocol, even simultaneously. One example is [http://www.pidgin.im  Pidgin, formerly called GAIM]. GPRS does induce a certain amount of latency but that should not be a problem for simple, text-oriented chat between parties. And the GTA02's WiFi  will make it even better.
-
-===What alternate distributions are available for the Neo FreeRunner?===
-
-See [[Distributions|Distributions]]
 
 == 2007.2 factory default software image ==
 
