/* Can the Neo FreeRunner dual boot? Multiple boot? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -154,7 +154,7 @@ See [[Flashing_the_Neo_FreeRunner|Flashing the Neo FreeRunner]]
 
 ===Can the Neo FreeRunner dual boot? Multiple boot?===
 
-Since the Neo FreeRunner can boot from the micro SD card, you can install from as many distributions as you can fit on the card. See [[Boot_from_sd_card|Booting from SD]].
+Since the Neo FreeRunner can boot from the micro SD card, you can install and boot from as many distributions as will fit on your card. See [[Boot_from_sd_card|Booting from SD]].
 
 ===Can the software do/connect to/... ===
 
