*Empty MediaWiki Message*

--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -136,6 +136,9 @@ Adding characters to the keyboard requires modifications to the source code, as 
 
 [[Category:Qtopia]]
 
+== Suspend /Resume ==
+It seems that suspend/resume only works when the FreeRunner has been connected to a powersource (only a few seconds if sufficient). If you boot from battery, it will never suspend until you have plugged it in at least for a couple of seconds.
+
 == Bugs ==
 
 === in 4.3.2 release ===
