*Empty MediaWiki Message*

--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -289,3 +289,8 @@ the webpages:
 doesn't exist anymore..
 
 ditto, still. can I just make all or sumpin and make it locally from source?
+
+
+--Wolfsolver
+Hi all,
+I found the file on http://downloads.openmoko.org/daily/, but i have no network connection from qemu...
