added known issues section

--- a/Debian.mw
+++ b/Debian.mw
@@ -257,5 +257,9 @@ If computer says:
 It means you haven't istalled xauth on your OM. So on your OM (with root permissions)
  apt-get install xauth 
 
+=Known Issues=
+
+TBA
+
 [[Category:Debian]]
 [[Category:Documentation]]
